@@ -1,0 +1,3 @@
+#!/bin/bash
+
+echo "ok - 測試"
